// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getChangedEntries cross exports 1`] = `
Array [
  Object {
    "name": "b",
    "source": "sampleFile.js",
  },
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntries import could be counted as entry 1`] = `
Array [
  Object {
    "name": "a",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntries single line 1`] = `
Array [
  Object {
    "name": "b",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntries single line 2`] = `
Array [
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntries single line 3`] = `
Array [
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
]
`;

exports[`getChangedEntries within 1 export 1`] = `
Array [
  Object {
    "name": "func",
    "source": "sampleFile.js",
  },
]
`;
